--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <h2>Игра на домбре</h2>
         <audio controls>
-            <source src="music.mp3" type="audio/mpeg">
+            <source src="music.mp3.mp3" type="audio/mpeg">
         </audio>
 
         <h2>Полезные ссылки</h2>
