--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             background-color: orange
         }
         .container {
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(220,162,117,0.8
+                            );
             padding: 30px;
             margin: 50px auto;
             width: 90%;
